1653 02062022 fixed safari overflow

--- a/styles/scss/site/_home-queries.scss
+++ b/styles/scss/site/_home-queries.scss
@@ -10,6 +10,12 @@
     }
   }
 }
+
+@media (min-width:1200px) {
+  .date-h4 {
+    flex: 0 0 55%;
+  }
+}
 @media (min-width: 1440px) {
   .banner{
     .swiper-slide{
@@ -183,6 +189,8 @@
         text-align: center;
         p.h4{
           font-size: 1rem;
+          width: 100%;
+          justify-content: center;
         }
       }
       p.h2{
